# wclap-js

./: .gitmodules  CMakeLists.txt  README.md
cpp/: wclap-js-instance.cpp  wclap-js-instance.h
es6/: wclap-plugin.mjs  wclap.mjs
